--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/ProyectoBD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.3.3.jar=C:\\jcalendar-1.3.3.jar
+file.reference.mysql-connector-java-5.1.6-bin.jar=D:\\mysql-connector-java-5.1.6-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${file.reference.mysql-connector-java-5.1.6-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
